Refined default theme rename-notification.
svn changeset:7885 branch:6.0

--- a/WebContent/VAADIN/themes/default/styles.css
+++ b/WebContent/VAADIN/themes/default/styles.css
@@ -1,10 +1,7 @@
 /* "default" theme has been renamed to "runo" */
 
 .v-generated-body {
-	background-image: url(images/default_theme_is_now_runo.png);
-	background-repeat: no-repeat;
-	height: 83px;
-	width: 347px;
+	background: #fff url(images/default_theme_is_now_runo.png) no-repeat 50%;
 }
 
 .v-app {
