#2812 copied AddressBook tutorial changes from the incubator project to Vaadin
svn changeset:7892 branch:6.0

--- a/WebContent/VAADIN/themes/contacts/styles.css
+++ b/WebContent/VAADIN/themes/contacts/styles.css
@@ -1,4 +1,5 @@
  @import url(../runo/styles.css);
+/* Using the old default theme (runo) as the basis for now */
 
 /* Add some padding to the tree */
 .v-tree {
