reindeer theme updates: filterselect with icon fixed, table default style now lighter (previous style now with stylename "strong").
svn changeset:7934 branch:6.0

--- a/WebContent/VAADIN/themes/base/table/table.css
+++ b/WebContent/VAADIN/themes/base/table/table.css
@@ -80,6 +80,10 @@
 	border: 0;
 	margin: 0;
 	padding: 0;
+	cursor: pointer;
+}
+.v-table-body-noselection .v-table-row,
+.v-table-body-noselection .v-table-row-odd {
 	cursor: default;
 }
 .v-table .v-selected {
