--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1146,6 +1146,10 @@
 	border: 0;
 	margin: 0;
 	padding: 0;
+	cursor: pointer;
+}
+.v-table-body-noselection .v-table-row,
+.v-table-body-noselection .v-table-row-odd {
 	cursor: default;
 }
 .v-table .v-selected {
@@ -2676,6 +2680,14 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent url(select/img/status-bg.png) repeat-x;
 }
 /* Filterselect with icon needs a similar fix than in buttons */
+.v-filterselect .v-icon {
+	width: 16px;
+	position: relative;
+}
+.v-filterselect .v-icon + .v-filterselect-input {
+	margin-left: -16px;
+	padding-left: 18px;
+}
 
 /* ./WebContent/VAADIN/themes/reindeer/slider/slider.css */
 .v-slider {
@@ -2758,8 +2770,7 @@ td.v-datefield-calendarpanel-nextyear {
 
 /* ./WebContent/VAADIN/themes/reindeer/table/table.css */
 .v-table-header-wrap {
-	border-color: #2b3033;
-	border-top: none;
+	border-color: #c2c3c4;
 	background: transparent repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
@@ -2768,8 +2779,8 @@ td.v-datefield-calendarpanel-nextyear {
 	text-transform: uppercase;
 	font-size: 10px;
 	font-weight: bold;
-	color: #e7e9ea;
-	text-shadow: #000 0 -1px 0;
+	color: #222;
+	text-shadow: #fff 0 1px 0;
 	line-height: normal;
 }
 .v-table-header {
@@ -2792,7 +2803,7 @@ td.v-datefield-calendarpanel-nextyear {
 	height: 20px;
 	width: 2px;
 	background: transparent;
-	border-right: 1px solid #1c1f21;
+	border-right: 1px solid #c2c3c4;
 }
 .v-table-header-cell-asc .v-table-caption-container {
 	background: transparent no-repeat right 7px;
@@ -2804,7 +2815,7 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent no-repeat right 7px;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: right -844px;
+  background-position: right -845px;
 }
 .v-table-body {
 	border-color: #c2c3c4;
@@ -2830,7 +2841,7 @@ td.v-datefield-calendarpanel-nextyear {
 	background: #4d749f repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -863px;
+  background-position: left -865px;
 	color: #fff;
 	text-shadow: #3b5a7a 0 1px 0;
 }
@@ -2844,19 +2855,19 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent no-repeat;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -883px;
+  background-position: left -885px;
 }
 .v-table-column-selector:active {
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -903px;
+  background-position: left -905px;
 }
 .v-table-focus-slot-left {
-	border-left-color: #9ca1a5;
+	border-left-color: #222;
 	margin-left: 0;
 }
 .v-table-focus-slot-right {
-	border-right-color: #9ca1a5;
+	border-right-color: #222;
 	margin-right: 0;
 }
 .v-table-header-drag {
@@ -2864,13 +2875,13 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -923px;
+  background-position: left -925px;
 	padding: 4px;
 	text-transform: uppercase;
 	font-size: 10px;
 	font-weight: bold;
-	color: #e7e9ea;
-	text-shadow: #000 0 -1px 0;
+	color: #222;
+	text-shadow: #fff 0 1px 0;
 	line-height: normal;
 }
 .v-table-header-drag * {
@@ -2889,10 +2900,9 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -943px;
+  background-position: left -945px;
 	border: 1px solid #939494;
-	border-top: none;
-	border-bottom-color: #7d7e80;
+	border: none;
 	border-radius-bottomleft: 4px;
 	border-radius-bottomright: 4px;
 	-moz-border-radius-bottomleft: 4px;
@@ -2903,6 +2913,9 @@ td.v-datefield-calendarpanel-nextyear {
 	padding: 4px 30px;
 	text-shadow: #fff 0 1px 0;
 	width: 100px;
+	position: relative;
+	top: 1px;
+	-webkit-box-shadow: rgba(0,0,0,.5) 0 1px 2px;
 }
 /* row in column selector */
 .v-contextmenu .v-on,
@@ -2911,7 +2924,7 @@ td.v-datefield-calendarpanel-nextyear {
 	background: transparent no-repeat 0 4px;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -964px;
+  background-position: left -967px;
 	padding-left: 12px;
 	padding-right: 4px;
 }
@@ -2922,12 +2935,56 @@ td.v-datefield-calendarpanel-nextyear {
 .v-contextmenu .gwt-MenuItem-selected .v-on {
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -978px;
+  background-position: left -981px;
 }
 /* Borderless style */
 .v-table-borderless .v-table-header-wrap,
 .v-table-borderless .v-table-body {
 	border: none;
+}
+/* Strong style */
+.v-table-strong .v-table-header-wrap {
+	border-color: #2b3033;
+	border-top-color: #2b3033;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -996px;
+	color: #e7e9ea;
+	text-shadow: #000 0 -1px 0;
+}
+.v-table-strong .v-table-resizer {
+	border-right-color: #1c1f21;
+}
+.v-table-strong .v-table-header-cell-asc .v-table-caption-container {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: right -1016px;
+}
+.v-table-strong ..v-table-header-cell-desc .v-table-caption-container {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: right -1035px;
+}
+.v-table-strong .v-table-column-selector {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1054px;
+}
+.v-table-strong .v-table-column-selector:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1074px;
+}
+.v-table-strong .v-table-header-drag {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1094px;
+	color: #e7e9ea;
+	text-shadow: #000 0 -1px 0;
+}
+.v-table-strong .v-table-focus-slot-left,
+.v-table-strong .v-table-focus-slot-right {
+	border-color: #9ca1a5;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet.css */
@@ -3006,7 +3063,7 @@ td.v-datefield-calendarpanel-nextyear {
 	background-repeat: repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -993px;
+  background-position: left -1114px;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 }
@@ -3099,7 +3156,7 @@ input.v-textfield-prompt {
 	background: #4d749f repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1016px;
+  background-position: left -1137px;
 	color: #fff;
 	padding: 1px 2px;
 	-webkit-border-radius: 2px;
@@ -3138,7 +3195,7 @@ input.v-textfield-prompt {
 	background: transparent repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1036px;
+  background-position: left -1157px;
 }
 .v-window-header {
 	font-weight: bold;
@@ -3154,13 +3211,13 @@ input.v-textfield-prompt {
 	background: transparent;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1073px;
+  background-position: left -1194px;
 }
 .v-window-footer {
 	background-repeat: repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1088px;
+  background-position: left -1209px;
 }
 .v-ie6 .v-window-footer {
 	zoom: 1;
@@ -3173,17 +3230,17 @@ input.v-textfield-prompt {
 	background: transparent;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1103px;
+  background-position: left -1224px;
 }
 .v-window-closebox:hover {
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1119px;
+  background-position: left -1240px;
 }
 .v-window-closebox:active {
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1135px;
+  background-position: left -1256px;
 }
 .v-window-contents {
 	background: #fff;
