--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -438,6 +438,10 @@
 .v-formlayout-cell .v-errorindicator {
 	display: block;
 }
+.v-formlayout-error-indicator {
+	/* fix width so layout is not jumpy when error disappears */
+	width: 12px;
+}
 .v-formlayout-captioncell {
 	text-align:right;
 	white-space: nowrap;
