--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -438,6 +438,10 @@
 .v-formlayout-cell .v-errorindicator {
 	display: block;
 }
+.v-formlayout-error-indicator {
+	/* fix width so layout is not jumpy when error disappears */
+	width: 12px;
+}
 .v-formlayout-captioncell {
 	text-align:right;
 	white-space: nowrap;
@@ -1891,10 +1895,6 @@ div.v-window-header {
 .v-formlayout-captioncell {
 	text-align:right;
 	white-space: nowrap;
-}
-.v-formlayout-error-indicator {
-	/* fix width so layout is not jumpy when error disapear */
-	width: 12px;
 }
 .v-formlayout-spacing .v-formlayout-row .v-formlayout-captioncell, 
 .v-formlayout-spacing .v-formlayout-row .v-formlayout-contentcell,
