--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -3031,11 +3031,7 @@ td.v-datefield-calendarpanel-nextyear {
 }
 .v-table-cell-wrapper {
 	padding-top: 3px;
-	height: 17px;
-}
-.v-table-row,
-.v-table-row-odd {
-	height: 19px;
+	padding-bottom: 3px;
 }
 .v-table-row-odd {
 	background: #eff0f1;
